--- a/worksheet/static/html/worksheet.html
+++ b/worksheet/static/html/worksheet.html
@@ -1,4 +1,4 @@
-<div id="worksheet">
+<div>
     <div class="xbt-table">
             <div class="xbt-row">
                 <div class="xbt-cell header"></div>
@@ -16,5 +16,5 @@
                 <div name="example2" class="xbt-cell input">Enter test 2 here</div>
             </div>
     </div>
-    <div id="repeat-buttons"><p>You can add and delete rows to the worksheet</p></div>
+    <div id="buttons"><p>You can add and delete rows to the worksheet</p></div>
 </div>
