Implemented rendering of current state

--- a/worksheet/static/html/worksheet.html
+++ b/worksheet/static/html/worksheet.html
@@ -1,7 +1,7 @@
 <div>
     <div class="xbt-table">
             <div class="xbt-row">
-                <div class="xbt-cell header"></div>
+                <div class="xbt-cell header">.</div>
                 <div class="xbt-cell header">Column 1</div>
                 <div class="xbt-cell header">Column 2</div>
             </div>
