Cleaned up code

--- a/assets/test-table-2.html
+++ b/assets/test-table-2.html
@@ -82,7 +82,7 @@
         td.parent().append(td2);
     }
 
-    var element = $('#worksheet');
+    var element = $('.worksheet-root');
 
     $('.repeat').addClass('repeat-original');
 
